less/style.less
/* ... */
.intropage {
    background-color: white;
    // color:white;

    .banner {
        height: 400px;
        text-align: center;
        background: url(../images/intro-banner.jpg) no-repeat center;
        background-size: cover; 
        margin-top: -81px;
        padding-top: 80px;
        width: 100%;

        .typogram {
            width: 50%;
            margin: auto;
            h1>img {
                width: 100%;
            }
        }

        .baseline {
            font-size: 2em;
            color: white;
            width: 70%;
            margin-right: auto;
            margin-left: auto;
            margin-top: 40px;
            line-height: 1.3em;

            @media (min-width: @screen-sm-min) {
                font-size: 2.8em;
            }
        }
    }

    .search-command {
        background-color: @esprova-red;
        color: white;
        padding: 70px 30px 100px 30px;
        margin-right: -15px;
        margin-left: -15px;
        
            label {
                font-weight: normal;
            }

        .search-example {
            font-style: italic;
            a {
                color: white;
            }
        }
    }

    .collaborative-banner {
        text-align: center;
        background-color: @esprova-lightergray;
        margin: 0 -15px 0 -15px;
        padding: 30px 0 40px 0;
        font-size: 1.2em;
        border-bottom: 1px solid @esprova-lightgray;
        border-top: 1px solid @esprova-lightgray;

    }

    .intro-spacer {
        background-color: @esprova-lightergray;
        height: 1px;
        margin: 60px -15px;
    }

    .informations {
        padding: 40px 0 50px 0;
        color: @esprova-darkgray;

        .about {
            text-align: center;

            .about-title {
                font-weight: 600;
                margin-bottom: 50px;
                font-size: 2.8em;
                // letter-spacing: 0.15em;

                @media (min-width: @screen-sm-min) and  (max-width: @screen-sm-max) {
                    font-size: 2.2em;
                }
            }


            .about-icon {
                margin-top: 50px;
                margin-bottom: 50px;
                height: 100px;
            }

            .about-text {
                .alt_font ();
                text-align: left;
                padding: 0 20px 0 20px;
                margin-bottom: 50px;
            }
        }
        .more-info {
            // padding: 150px 0 0 0;
            position: relative;

            .more-info-icon {
                padding: 0;
                height: 200px;
                line-height: 200px;
                text-align: center;
                margin-bottom: 30px;

                > img {
                    height: 150px;

                }

                // used to center vertically on large devices
                @media (min-width: @screen-sm-min) {
                    position:absolute;
                    top: 50%;
                    transform: translateY(-50%);
                    -ms-transform: translateY(-50%); /* IE 9 */
                    -webkit-transform: translateY(-50%); /* Safari */
                    margin-bottom: 0px;
                }
        
            }

            .more-info-text {
                padding: 0 30px 0 30px;
                text-align: left;

                .title {
                    font-size: 2em;
                    margin-bottom: 50px;
                    text-align: center;
                    font-weight: 600;
                }

                .text {
                    .alt_font ();
                    margin-bottom: 30px;
                }


            }
        }
    }

}
/* ... */

